# RAG-Lab

./: .gitignore  README.md  app.py  main.py  notebook.ipynb  pyproject.toml
notebooks/: notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb
