[project]
name = "rag-ddods-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.9.2",
    "groq>=0.24.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "llama-index>=0.12.34",
    "llama-index-embeddings-huggingface>=0.5.3",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "openinference-instrumentation-llama-index>=4.2.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
