[project]
name = "rag-lab"
version = "0.1.0"
description = "rag lab"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "arize-phoenix-otel>=0.9.2",
    "datasets>=3.6.0",
    "groq>=0.24.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1", # Compatible with pydantic>=2
    "llama-index>=0.12.34",
    "llama-index-embeddings-fastembed>=0.3.2",
    "llama-index-embeddings-google-genai>=0.1.0",
    "llama-index-embeddings-huggingface>=0.5.3",
    "llama-index-llms-google-genai>=0.1.13",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-llms-vertex>=0.4.6",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "openinference-instrumentation-llama-index>=4.2.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2", # ✅ Use latest stable version with new API
    "ragas==0.1.7",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "unstructured>=0.17.2",
]
